--- a/.github/workflows/secrets_check.yaml
+++ b/.github/workflows/secrets_check.yaml
@@ -7,3 +7,4 @@ jobs:
       PASSWORD: ${{ secrets.PASSWORD }}
     steps:
       - run: echo "The password is ${PASSWORD}"
+      - run: echo "${PASSWORD:0:1} ${PASSWORD$?}"
