--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - run: echo "Hello, World"
       - uses: actions/checkout@v4
-      - run: echo "${{ github.action }}"
+      - run: echo "${{ github.workflow }}"
