--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -29,3 +29,19 @@ jobs:
           echo "## Example Title :rocket:" >> "${GITHUB_STEP_SUMMARY}"
           echo "- first line" >> "${GITHUB_STEP_SUMMARY}"
           echo "- second line" >> "${GITHUB_STEP_SUMMARY}"
+
+  share-data-between-jobs-before:
+    runs-on: ubuntu-latest
+    steps:
+      - id: data_generate
+        run: echo "result=Hello" >> "${GITHUB_OUTPUT}"
+    outputs:
+      result: ${{ steps.data_generate.outputs.result }}
+  share-data-between-jobs-after:
+    runs-on: ubuntu-latest
+    needs: [share-data-between-jobs-before]
+    steps:
+      - env:
+          RESULT: ${{ needs.share-data-between-jobs-before.result }}
+        run: |
+          [ ! -z "${RESULT}" ] && echo "${RESULT}" || echo "RESULT は空です"
